[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/GameOver.gd" type="Script" id=1]

[node name="GameOver" type="Control"]
margin_right = 1029.0
margin_bottom = 602.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1026.0
margin_bottom = 599.0
color = Color( 0.176471, 0.14902, 0.14902, 0.882353 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -65.0
margin_right = 132.0
margin_bottom = 65.0

[node name="Pleieghein" type="Button" parent="VBoxContainer"]
margin_right = 264.0
margin_bottom = 20.0
text = "Pleieghein"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 264.0
margin_bottom = 44.0
text = "Basta!!!"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 233.0

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 109.0
margin_right = 1024.0
margin_bottom = 123.0
text = "Game Over"
align = 1

[connection signal="mouse_entered" from="VBoxContainer/Pleieghein" to="." method="_on_Pleieghein_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Pleieghein" to="." method="_on_Pleieghein_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
